--- a/index.html
+++ b/index.html
@@ -4,33 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Tableau Dashboard</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh; /* Full viewport height */
-            margin: 0;
-            background-color: #f0f0f0; /* Optional: background color */
-        }
-        .tableauPlaceholder {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-        }
-        object.tableauViz {
-            border: none;
-            width: 1200px; /* Adjust as needed */
-            height: 827px; /* Adjust as needed */
-        }
-    </style>
 </head>
 <body>
-    <h1 style="text-align: center;">Interactive Tableau Dashboard</h1>
+    <h1>Interactive Tableau Dashboard</h1>
 
-    <div class='tableauPlaceholder' id='viz1726484099428'>
+    <div class='tableauPlaceholder' id='viz1726484099428' style='position: relative'>
         <noscript>
             <a href='#'>
                 <img alt='Sales Dashboard' src='https://public.tableau.com/static/images/Sa/SalesDashboard_17264440068640/SalesDashboard/1_rss.png' style='border: none' />
@@ -70,5 +48,6 @@
         scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
         vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script>
+
 </body>
 </html>
